test/classes/initializers/errors/field-reinitialization.future
bug: reinitialization of var fields not detected
#9178
